- Función para enviar mensajes al agente remoto
git-svn-id: file:///var/svn/repos/knitter/trunk@21 55580ce4-9f14-0410-99c4-eacaa80e0a6d

--- a/knitter_ans_simple.cfg
+++ b/knitter_ans_simple.cfg
@@ -1,2 +1,2 @@
-[{agent, "agenteLocal"}, {protocol, simple}, {hostname, "localhost"}, {port, 3332}].
-[{agent, "agenteRemoto"}, {protocol, simple}, {hostname, "localhost"}, {port, 3332}].
+[{agent, "agenteLocal"}, {protocol, simple}, {hostname, "aliana"}, {port, 3332}].
+[{agent, "agenteRemoto"}, {protocol, simple}, {hostname, "lidia"}, {port, 3332}].
