- Cambiamos el nombre de KNITTER_ANS_SIMPLE a KNITTER_ANS_FILE
git-svn-id: file:///var/svn/repos/knitter/trunk@24 55580ce4-9f14-0410-99c4-eacaa80e0a6d

--- a/knitter.cfg
+++ b/knitter.cfg
@@ -1,3 +1,3 @@
-{ans, knitter_ans_simple}.
+{ans, knitter_ans_file}.
 {protocol, {simple, knitter_tr_simple}}.
 {protocol, {kek, knitter_port_kek}}.
