- Cambiado "hostname" por "address"
git-svn-id: file:///var/svn/repos/knitter/trunk@29 55580ce4-9f14-0410-99c4-eacaa80e0a6d

--- a/knitter_ans_file.cfg
+++ b/knitter_ans_file.cfg
@@ -1,2 +1,2 @@
-[{agent, "agenteLocal"}, {protocol, simple}, {hostname, "aliana"}, {port, 3332}].
-[{agent, "agenteRemoto"}, {protocol, simple}, {hostname, "lidia"}, {port, 3332}].
+[{agent, "agenteAliana"}, {protocol, simple}, {address, "aliana"}, {port, 3332}].
+[{agent, "agenteLidia"}, {protocol, simple}, {address, "lidia"}, {port, 3332}].
